--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 colorama==0.4.6
+coverage==7.7.0
 exceptiongroup==1.2.2
 iniconfig==2.0.0
 packaging==24.2
 pluggy==1.5.0
 pytest==8.3.5
+pytest-cov==6.0.0
 pytest-sugar==1.0.0
 termcolor==2.5.0
 tomli==2.2.1
